# cursed

./: !  -f  .cirrus.yml  .csv  .cursed-doc.toml  .cursed-fmt.toml  .cursed-lint.toml  .envrc  .fix_plan.md.swp  .gitignore  .rotate_binary_tree.csd.swp  01_nested_operations  704_binary_search_fixed.💀  ADAPTIVE_GC_IMPLEMENTATION_SUMMARY.md  ADVANCED_ARCHIVEZ_COMPRESSION_IMPLEMENTATION_SUMMARY.md  ADVANCED_ERROR_HANDLING_IMPLEMENTATION_SUMMARY.md  ADVANCED_ERROR_RECOVERY_IMPLEMENTATION_SUMMARY.md  ADVANCED_FEATURES_IMPLEMENTATION_SUMMARY.md  ADVANCED_FEATURES_VALIDATION_REPORT.md  ADVANCED_GENERICS_IMPLEMENTATION_SUMMARY.md  ADVANCED_IDE_FEATURES.md  ADVANCED_MATH_IMPLEMENTATION_COMPLETE.md  ADVANCED_MATRIX_OPERATIONS_IMPLEMENTATION_COMPLETE.md  ADVANCED_MEMORY_MANAGEMENT_IMPLEMENTATION.md  ADVANCED_MEMORY_POOLS_IMPLEMENTATION_SUMMARY.md  ADVANCED_OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  ADVANCED_OPTIMIZATION_SUMMARY.md  ADVANCED_PARSER_IMPLEMENTATION_COMPLETE.md  ADVANCED_PATTERN_MATCHING_ACHIEVEMENT.md  ADVANCED_PATTERN_MATCHING_IMPLEMENTATION_COMPLETE.md  ADVANCED_PATTERN_MATCHING_IMPLEMENTATION_PLAN.md  ADVANCED_PERFORMANCE_OPTIMIZATION_COMPLETE.md  ADVANCED_PERFORMANCE_OPTIMIZATION_ENHANCEMENTS.md  ADVANCED_PERFORMANCE_OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  ADVANCED_SELECT_IMPLEMENTATION_SUMMARY.md  ADVANCED_SIGNATURE_PARSING_SUMMARY.md  ADVANCED_STDLIB_IMPLEMENTATION_SUMMARY.md  ADVANCED_SYNC_PRIMITIVES_DOCUMENTATION.md  ADVANCED_SYNC_PRIMITIVES_IMPLEMENTATION_SUMMARY.md  ADVANCED_ZIG_CODEGEN_IMPLEMENTATION_SUMMARY.md  (+8362 more)
.cargo/: config.toml  config.toml.backup  config.toml.simplified
.cursed_build_cache/: cache_config.json
.cursor/: rules.mdc
.sourcegraph/: agent.md  control_flow_fix_status.md  dot_expression_implementation.md  gc_implementation.md  loop_context_fix_status.md  memory.md  object_storage_and_finalization.md  parser_generics_implementation.md  parser_redesign_status.md  preprocessor_implementation.md  rustdoc_plan.md  rustdoc_status.md  string_switch_implementation.md  string_switch_plan.md  string_switch_update.md
1/: Makefile  README.md  advanced_topo_sort.csd  input.txt  simple_topo_sort.csd  topo_sort  topological_sort.csd  working_topo_sort.csd
123/: Makefile  README.md  complete_demo.csd  demo_app.csd  features_demo.csd  simple_test.csd
advanced_test_suites/: README.md  ci_cd_integration.yml  run_all_tests.py  validate_test_suite.sh
api/: CursedPackage.toml
api_server/: CursedPackage.toml
applications/: run_all_tests.csd  run_all_tests.💀
benches/: compression_benchmark.rs  lto_benchmarks.rs  optimization_benchmark.rs  optimization_benchmarks.rs  optimization_passes_bench.rs  production_gc_benchmarks.rs  system_monitoring_benchmark.rs
benchmark_test_venv/: pyvenv.cfg
benchmarks/: crypto_protocols_benchmark.rs  heap_stress_benchmark.rs  interface_optimization_benchmark.csd  large_application.csd  medium_program.csd  medium_program.💀  memory_pool_benchmarks.csd  oracle_macro_performance_suite.csd  oracle_macro_performance_suite.💀  performance_optimization_validation.csd  pgo_benchmark_suite.csd  small_function.csd  small_function.💀
ci/: CI_IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  SELF_HOSTING_CI_DOCUMENTATION.md  bootstrap_performance_monitor.py  bootstrap_validation_ci.sh  bootstrap_validation_tests.sh  comprehensive_bootstrap_validation.sh  comprehensive_self_hosting_test_suite.sh  differential_bootstrap_tester.py  performance_baseline.json  performance_regression_detection.sh  self_hosting_ci_integration.yml  self_hosting_validation.sh  setup_self_hosting_ci.sh  test_self_hosting_locally.sh
community/: README.md  contribution-guidelines.md  discord-server-setup.md  discord_server_setup.md  educational-content-series.md  events-engagement-programs.md  launch_blog_post.md  metrics-dashboard.md  social-media-outreach-strategy.md  support-workflows.md
community_testing/: bug_report_template.md  setup_guide.md  test_scenarios.csd
coverage/: coverage.html  coverage.json
cross_compilation_results/: cursed-linux-arm64  cursed-linux-x64  cursed-macos-arm64  cursed-macos-x64  cursed-wasm32.wasm
cross_test_project/: Cargo.toml
cursed-intellij-plugin/: build.gradle.kts
cursed-vscode/: package.json
cursed-vscode-extension/: language-configuration.json  package.json
cursed-vscode-extension-advanced/: language-configuration.json  package.json  tsconfig.json
debug/: test_simple.debug_report.md  test_simple.gdb  test_simple.ll
demo_cursed_project/: package.json
deploy/: README.md  monitoring_setup.py  package_builder.py  performance_profiler.py  production_pipeline.sh  release_automation.py  security_scanner.py  test_deployment.sh
disabled_modules/: dead_code_elimination.rs  loop_optimization_old.rs
docs/: ADVANCED_COMPRESSION_FEATURES.md  ADVANCED_OPTIMIZATION.md  CLOUD_NATIVE_DEPLOYMENT_GUIDE.md  CONCURRENCY_GUIDE.md  CSV_RFC4180_IMPLEMENTATION.md  DATABASE_CONNECTION_POOLING_ENHANCEMENT.md  DEBUGGER_DOCUMENTATION.md  DEBUGGER_USAGE.md  DOCUMENTATION_SUMMARY.md  DOCUMENTATION_SYSTEM.md  ERROR_HANDLING_GUIDE.md  GETTING_STARTED.md  HTTP2_ADVANCED_WEB_FEATURES.md  HTTP2_IMPLEMENTATION_GUIDE.md  IDE_SETUP_GUIDE.md  INTEROP_GUIDE.md  JIT_STABILIZATION_GUIDE.md  LANGUAGE_REFERENCE.md  LSP_EDITOR_SETUP.md  LSP_IMPLEMENTATION_SUMMARY.md  LSP_SERVER.md  LSP_SETUP.md  MACRO_SYSTEM.md  MIGRATION_GUIDE.md  OPTIMIZATION_IMPROVEMENTS.md  POST_QUANTUM_CRYPTOGRAPHY_IMPLEMENTATION.md  README.md  SECURE_METRICS_EXPORT.md  TLS_ENHANCEMENTS_GUIDE.md  TROUBLESHOOTING.md  UNICODE_ENHANCED_FEATURES.md  V1_0_DOCUMENTATION_SUMMARY.md  WASM_DEPLOYMENT_GUIDE.md  adaptive_gc_memory_management.md  advanced_function_inlining_system.md  advanced_generics.md  advanced_llvm_optimization_implementation.md  advanced_llvm_optimizations.md  advanced_optimization_system.md  ast_integration_for_documentation.md  (+244 more)
docs_generated/: advanced.html  advanced_collections.html  advanced_data_structures.html  algorithms.html  allocator.html  basic_test.html  bootstrap.html  build_integration.html  bulk_test_generator.html  comprehensive_async_demo.html  (+356 more)
(+21972 files in other folders)
