[package]
name = "cursed"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cursed"
path = "src/main.rs"

[workspace]
# This is a standalone package

[features]
default = ["std", "networking", "ffi", "crypto-rustcrypto"]
std = []
networking = ["tokio", "mio"]
ffi = ["libc"]
wasm = ["wasm-bindgen", "js-sys", "web-sys"]
crypto-ring = ["ring"]
crypto-rustcrypto = []

[build-dependencies]
regex = "1.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
subtle = "2.5.0"
base64ct = "=1.6.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"

# Conditional build dependencies
libc = { version = "0.2", optional = true }

[dependencies]
regex = "1.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
subtle = "2.5.0"
base64ct = "=1.6.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
colored = "2.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tar = "0.4"
zip = "0.6"
inkwell = { version = "0.4", features = ["llvm17-0"] }
gimli = "0.28"
object = "0.32"
sysinfo = "0.30"
crossbeam-channel = "0.5"
cfg-if = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
glob = "0.3"
toml = "0.8"
num_cpus = "1.16"
dirs = "5.0"
env_logger = "0.10"
fastrand = "2.0"
tower-lsp = "0.20"
flate2 = "1.0"
crossbeam = "0.8"
semver = "1.0"

# Platform-specific dependencies for native targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2"
llvm-sys = "181"
tokio = { version = "1.0", features = ["full"], optional = true }
mio = { version = "0.8", optional = true }
# Native targets can use ring for crypto
ring = { version = "0.17", optional = true }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = [
  "console",
  "Performance",
  "Window",
  "Worker",
], optional = true }
wasi = "0.11"

# Crypto dependencies available on both native and WASM
sha2 = "0.10"
blake3 = "1.5"
sha3 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
scrypt = "0.11"
argon2 = "0.5"
bcrypt = "0.15"
ed25519-dalek = "2.0"
aes = "0.8"
aes-gcm = "0.10"
