[package]
name = "cursed"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cursed"
path = "src/main.rs"

[workspace]
# This is a standalone package

[features]
default = ["std", "crypto-rustcrypto", "llvm-backend"]
std = []
# WASM-compatible features without LLVM/FFI
wasm-compatible = ["wasm-bindgen", "js-sys", "web-sys"]
# Native features requiring FFI/LLVM
llvm-backend = []
ffi = ["libc"]
wasm = ["wasm-bindgen", "js-sys", "web-sys"]
crypto-ring = ["ring"]
crypto-rustcrypto = []

[build-dependencies]
regex = "1.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
subtle = "2.5.0"
base64ct = "=1.6.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"

# Conditional build dependencies
libc = { version = "0.2", optional = true }

[dependencies]
regex = "1.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
subtle = "2.5.0"
base64ct = "=1.6.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
colored = "2.0"
futures = "0.3"
# Move reqwest to target-specific sections for WASM compatibility
# Move archive and LLVM dependencies to target-specific sections for WASM compatibility
gimli = "0.28"
object = "0.32"
sysinfo = "0.30"
crossbeam-channel = "0.5"
cfg-if = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
glob = "0.3"
toml = "0.8"
num_cpus = "1.16"
dirs = "5.0"
env_logger = "0.10"
fastrand = "2.0"
tower-lsp = "0.20"
# Move flate2 to target-specific sections for WASM compatibility
crossbeam = "0.8"
crossbeam-utils = "0.8"
crossbeam-epoch = "0.9"
parking_lot = "0.12"
semver = "1.0"
either = "=1.8.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.0"
tokio-util = "0.7"
log = "0.4"
# tokio moved to target-specific sections
mockito = "1.0"
warp = "0.3"

# Crypto dependencies
sha2 = "0.10"
blake3 = "1.5"
sha3 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
scrypt = "0.11"
argon2 = "0.5"
bcrypt = "0.15"
ed25519-dalek = "2.0"
aes = "0.8"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
p256 = "0.13"
rsa = "0.9"
tiny-keccak = { version = "2.0", features = ["sha3", "keccak"] }
getrandom = { version = "0.2", features = ["js"], default-features = false }
rand_chacha = "0.3"

# Additional dependencies
rustyline = "14.0"
walkdir = "2.0"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "winnt", "memoryapi", "processthreadsapi", "sysinfoapi", "winuser", "handleapi", "ioapiset", "errhandlingapi", "winsock2", "minwinbase", "fileapi"] }
# Native compression libraries for non-WASM targets
flate2 = "1.0"

# Unix-like systems (Linux, macOS) - not Windows, not WASM
[target.'cfg(all(unix, not(target_arch = "wasm32")))'.dependencies]
libc = "0.2"
tokio = { version = "1.0", features = ["full"] }
# mio removed - incompatible with WASM and not essential
# Native compression libraries for non-WASM targets
flate2 = "1.0"

# LLVM support for native targets only (not WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
llvm-sys = "181"
inkwell = { version = "0.4", features = ["llvm17-0"] }
tar = "0.4"
zip = "0.6"
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Native targets (not WASM) can use ring for crypto, but exclude macOS cross-compilation due to SDK issues
[target.'cfg(all(not(target_arch = "wasm32"), not(all(target_os = "macos", not(target_env = "")))))'.dependencies]
ring = { version = "0.17", optional = true }

# macOS native builds only (when building on actual macOS)
[target.'cfg(all(target_os = "macos", target_env = ""))'.dependencies]
ring = { version = "0.17", optional = true }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = [
  "console",
  "Performance",
  "Window",
  "Worker",
], optional = true }
wasi = "0.11"
# WASM-compatible tokio without net/process features
tokio = { version = "1.0", default-features = false, features = ["rt", "macros", "time"] }
# WASM-compatible getrandom with js feature
getrandom = { version = "0.2", features = ["js"], default-features = false }
# Exclude native-only dependencies for WASM

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "winnt", "handleapi", "winbase", "processthreadsapi"] }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
# Replace zstd with a pure Rust implementation for WASM
zstd = { version = "0.13", default-features = false, features = ["zstdmt"] }

# Move crypto dependencies to main dependencies section
